# oj-eval-aider-002-20260708181849

./: CMakeLists.txt
src/: int2048.cpp
src/include/: int2048.h
